<?xml version="1.0"?>
<package format="2">
  <name>aws_robomaker_gazebo_bridge</name>
  <version>1.0.0</version>
  <description>
    AWS RoboMaker package containing nodes to read Gazebo data and publish it to ROS topics.
  </description>
  <license>Apache 2.0</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
