<?xml version="1.0"?>
<package format="2">
  <name>aws_robomaker_gazebo_ros</name>
  <description>
    AWS RoboMaker package containing launch files that facilitate using Gazebo with AWS RoboMaker runtime capabilities.
  </description>
  <version>1.0.0</version>
  <license>Apache 2.0</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
