<?xml version="1.0"?>
<package format="2">
  <name>aws_robomaker_simulation_ros_pkgs</name> <!-- This is a meta package! -->
  <version>1.1.0</version>
  <description>
    AWS RoboMaker package for accessing the simulation service.
  </description>
  <license>Apache 2.0</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
