<?xml version="1.0"?>
<package format="3">
  <name>robomaker_simulation_msgs</name>
  <version>1.1.1</version>
  <description>
    AWS RoboMaker package containing ROS service definitions for service endpoints provided inside of an AWS RoboMaker simulation.
  </description>
  <license>Apache 2.0</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
