<?xml version="1.0"?>
<package format="2">
  <name>robomaker_simulation_service</name>
  <version>1.1.0</version>
  <description>
    AWS RoboMaker package for accessing the service
  </description>
  <license>Apache 2.0</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>robomaker_simulation_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
